--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "scripts": {
+    "production": "npx webpack --mode production --config webpack.config.js"
+  },
   "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/plugin-transform-runtime": "^7.21.4",
+    "@babel/preset-env": "^7.21.5",
+    "babel-loader": "^9.1.2",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.1.0"
   }
