--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/plugin-transform-runtime": "^7.21.4",
     "@babel/preset-env": "^7.21.5",
     "babel-loader": "^9.1.2",
+    "html-webpack-plugin": "^5.5.1",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.1.0"
   }
