--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
-    "production": "npx webpack --mode production --config webpack.config.js"
+    "production": "webpack --config webpack.config.js",
+    "start": "webpack serve --config webpack.config.dev.js",
+    "dev": "webpack --config webpack.config.dev.js"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
@@ -9,12 +11,14 @@
     "babel-loader": "^9.1.2",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
+    "css-minimizer-webpack-plugin": "^5.0.0",
     "html-webpack-plugin": "^5.5.1",
     "mini-css-extract-plugin": "^2.7.5",
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
     "webpack": "^5.82.0",
-    "webpack-cli": "^5.1.0"
+    "webpack-cli": "^5.1.0",
+    "webpack-dev-server": "^4.15.0"
   }
 }
