--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "webpack": "^5.82.0",
     "webpack-cli": "^5.1.0",
     "webpack-dev-server": "^4.15.0"
+  },
+  "dependencies": {
+    "zustand": "^4.3.9"
   }
 }
